traces/bug_248.txt
#248
kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:2989: error: Deadlock
  Potential self deadlock. `EagerCheckpointDisposalTest_RemoveCursorTriggersCB_Test::TestBody` locks `&(this->manager->queueLock)` in `class EagerCheckpointDisposalTest_RemoveCursorTriggersCB_Test` twice.

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:2989:9: In method `EagerCheckpointDisposalTest_RemoveCursorTriggersCB_Test::TestBody`
2987.         manager->setCheckpointDisposer(callback.AsStdFunction());
2988. 
2989.         manager->removeCursor(cursor);
              ^
2990.         EXPECT_EQ(0, this->manager->getNumOpenChkItems());
2991.         EXPECT_EQ(1, this->manager->getNumCheckpoints());

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:2989:9: Method call: `CheckpointManager::removeCursor`
2987.         manager->setCheckpointDisposer(callback.AsStdFunction());
2988. 
2989.         manager->removeCursor(cursor);
              ^
2990.         EXPECT_EQ(0, this->manager->getNumOpenChkItems());
2991.         EXPECT_EQ(1, this->manager->getNumCheckpoints());

kv_engine/engines/ep/src/checkpoint_manager.cc:380:33:  locks `&(this->manager->queueLock)` in `class EagerCheckpointDisposalTest_RemoveCursorTriggersCB_Test`
378.     removeCursorPreLockHook();
379. 
380.     std::lock_guard<std::mutex> lh(queueLock);
                                     ^
381.     return removeCursor(lh, cursor);
382. }

kv_engine/engines/ep/src/checkpoint_manager.cc:381:12: Method call: `CheckpointManager::removeCursor`
379. 
380.     std::lock_guard<std::mutex> lh(queueLock);
381.     return removeCursor(lh, cursor);
                ^
382. }
383. 

kv_engine/engines/ep/src/checkpoint_manager.cc:474:9:  locks `&(this->manager->queueLock)` in `class EagerCheckpointDisposalTest_RemoveCursorTriggersCB_Test`
472.         queueLock.unlock();
473.         runGetItemsHook(cursor, vb.getId());
474.         queueLock.lock();
             ^
475.     }
476. 
